fixed wrapping issue in FF; it seems to have bigger fonts for some reason

--- a/views/styles.scss
+++ b/views/styles.scss
@@ -83,7 +83,6 @@ a:hover {
     }
 
     h2 {
-        width: 300px;
         margin-left: 10px;
         font-size: 15pt;
         color: $color3;
